src/objects/Accounting_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting_Subscriber</label>
        <referenceTo>Accounting_Subscriber__c</referenceTo>
        <relationshipLabel>Accounting Subscriptions</relationshipLabel>
        <relationshipName>Accounting_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_subscriber_domain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain</label>
        <referenceTo>Domain__c</referenceTo>
        <relationshipLabel>Accounting Subscriptions</relationshipLabel>
        <relationshipName>Accounting_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimagi_Contact__c</fullName>
        <formula>account__r.dimagi_contact__c</formula>
        <label>Dimagi Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justify_why_Skip_Auto_Downgrade__c</fullName>
        <label>Justify why &quot;Skip Auto Downgrade&quot;</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifespan_in_Months__c</fullName>
        <description>Length of subscription in months. If no end date, length so far.</description>
        <formula>(BLANKVALUE(date_end__c, TODAY()) -  date_start__c ) / 30.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Length of subscription in months. If no end date, length so far.</inlineHelpText>
        <label>Lifespan in Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_MRR__c</fullName>
        <description>The MRR of the subscription over its lifespan. Does not include non SMS or user fees. Assumes end date is today if there is no end date.</description>
        <formula>(BLANKVALUE(date_end__c,TODAY()) - date_start__c) / 30.1 *  accounting_software_monthly_fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The MRR of the subscription over its lifespan. Does not include non SMS or user fees. Assumes end date is today if there is no end date.</inlineHelpText>
        <label>Lifetime MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>This is a field for any qualitative notes on this particular subscription / account combination.  It is not on the domain as this can change from subscription to subscription and month to month.</description>
        <inlineHelpText>This is a field for any qualitative notes on this particular subscription / account combination.  It is not on the domain as this can change from subscription to subscription and month to month.</inlineHelpText>
        <label>Notes</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Part_of_inside_sales_process__c</fullName>
        <description>Inside Sales process means the lead source is inbound AND responded to at least one of the Sales team&apos;s email or directly contacted the Sales team</description>
        <inlineHelpText>Inside Sales process means the lead source is inbound AND responded to at least one of the Sales team&apos;s email or directly contacted the Sales team</inlineHelpText>
        <label>Part of inside sales process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Active_or_Paying__c</fullName>
        <formula>is_active__c  ||  (Accounting_subscriber_domain__r.Likely_Real__c  &amp;&amp;  Accounting_subscriber_domain__r.cpIsActive__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Real &amp; Active or Paying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Opportunity created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CommCareHQ India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_Plan_Edition__c</fullName>
        <formula>plan_version__r.Accounting_SoftwarePlan__r.edition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Plan Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Length__c</fullName>
        <description>Subscription length in months</description>
        <formula>(BLANKVALUE(date_end__c, TODAY()) - date_start__c) / 30.1</formula>
        <inlineHelpText>in months</inlineHelpText>
        <label>Subscription Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>account</label>
        <referenceTo>Accounting_BillingAccount__c</referenceTo>
        <relationshipLabel>Accounting Subscriptions</relationshipLabel>
        <relationshipName>Accounting_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>accounting_software_monthly_fee__c</fullName>
        <formula>plan_version__r.Software_Product_Rate__r.monthly_fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>accounting_softwareplan_name__c</fullName>
        <formula>plan_version__r.Accounting_SoftwarePlan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>auto_generate_credits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>auto_generate_credits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>date_created__c</fullName>
        <label>date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_delay_invoicing__c</fullName>
        <label>date_delay_invoicing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_end__c</fullName>
        <label>date_end</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_start__c</fullName>
        <label>date_start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>do_not_invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>do_not_invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>funding_source__c</fullName>
        <label>Funding source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is_active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_hidden_to_ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is hidden to ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is_trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>plan_version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>plan_version</label>
        <referenceTo>Accounting_SoftwarePlanVersion__c</referenceTo>
        <relationshipLabel>Accounting Subscriptions</relationshipLabel>
        <relationshipName>Accounting_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pro_bono_status__c</fullName>
        <label>pro_bono_status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesforce_contract_id__c</fullName>
        <label>salesforce_contract_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_type__c</fullName>
        <label>service_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skip_auto_downgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>skip_auto_downgrade</label>
        <type>Checkbox</type>
    </fields>
    <label>Accounting Subscription</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Accounting Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>